@@ -1,0 +1,31 @@
+# Sample .travis.yml for R projects.
+#
+# See the r-travis repo and its wiki 
+#   https://github.com/craigcitro/r-travis/wiki
+#   https://github.com/eddelbuettel/r-travis/
+
+language: c
+
+env:
+  global:
+    - _R_CHECK_FORCE_SUGGESTS_=FALSE
+
+before_install:
+  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
+  - chmod 755 ./travis-tool.sh
+  - ./travis-tool.sh bootstrap
+
+install:
+  - ./travis-tool.sh install_aptget libprotobuf-dev libprotoc-dev protobuf-compiler
+  - ./travis-tool.sh install_r Rcpp RCurl RUnit highlight
+
+script: 
+  - ./travis-tool.sh run_tests
+
+after_failure:
+  - ./travis-tool.sh dump_logs
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
